Fixed options not saving correctly Added an option to disable multiplayer mode. Fixes #8 (for now)

--- a/pf-resources/assets/presencefootsteps/lang/en_US.lang
+++ b/pf-resources/assets/presencefootsteps/lang/en_US.lang
@@ -3,6 +3,9 @@ menu.pf.title=Presence Footsteps Configuration
 menu.pf.on=On
 menu.pf.off=Off
 
+menu.pf.multiplayer.on=Mode: Multiplayer
+menu.pf.multiplayer.off=Mode: Singleplayer
+
 menu.pf.volume.min=Minimum
 menu.pf.volume.max=Maximum
 menu.pf.volume=Volume
