Round 3! Various cleaning up and convert all the config files to use json

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -22,19 +22,21 @@
 	"menu.pf.warn.none.2": "You don't have any Presence Footsteps Resource Packs installed!",",
 	"menu.pf.warn.none.3": "Put the Resource Pack in the resourcepacks/ folder.",
 	"pf.mlp.0": "Mine Little Pony has been detected!",
-	"pf.mlp.1": " 4-legged mode is now enabled, which will make running sound like galloping amongst other things.",
-	"pf.mlp.2": " To disable it hold down CTRL+SHIFT+F for 1 second.",
+	"pf.mlp.1": "4-legged mode is now enabled, which will make running sound like galloping amongst other things.",
+	"pf.mlp.2": "To disable it hold down CTRL+SHIFT+F for 1 second.",
 	"pf.mlp.2.button": " To disable it press %s.",
 	"pf.mlp.2.stance": " This option will turn off automatically when you remove Mine Little Pony. To disable it now or make it permanent hold down CTRL+SHIFT+F for 1 second.",
 	"pf.mlp.2.stance.button": " This option will turn off automatically when you remove Mine Little Pony. To disable it now or make it permanent press %s.",
-	"pf.pack.unloaded.0": "Resource Pack not enabled yet!",
+	"pf.pack.unloaded.0": "Resource Pack disabled!",
 	"pf.pack.unloaded.1": "You need to activate the "Presence Footsteps Resource Pack" in the Minecraft Options menu for it to run.",
-	"pf.pack.none.0": "Resource Pack missing from resourcepacks/!",
-	"pf.pack.none.1": "You may have forgotten to put the Resource Pack file into your resourcepacks/ folder.",
+	"pf.pack.none.0": "Resource Pack missing!",
+	"pf.pack.none.1": "Please put the Resource Pack file into your resourcepacks/ folder.",
 	"pf.pack.yay": "It should work now!",
 	"pf.debug.off": "Debugging Disabled",
 	"pf.debug.on": "Debugging Enabled",
 	"pf.report.save": "File saved as: %s",
 	"pf.report.error": "Failed to generate report: %s",
-	"key.presencefootsteps": "Presence Footsteps"
+	"key.presencefootsteps": "Presence Footsteps",
+	"pf.update.title": "An update is avaiable",
+	"pf.update.text": "Presence Footsteps %s%d for Minecraft %s"
 ]
