Redesign the options screen

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -1,22 +1,20 @@
 {
 	"key.presencefootsteps.settings": "Presence Footsteps",
-	"menu.pf.title": "Presence Footsteps Configuration",
-	"menu.pf.true": "On",
-	"menu.pf.false": "Off",
+	"menu.pf.title": "Presence Footsteps Options",
 	"menu.pf.multiplayer.true": "Mode: Multiplayer",
 	"menu.pf.multiplayer.false": "Mode: Singleplayer",
 	"menu.pf.volume.min": "Volume: OFF",
-	"menu.pf.volume": "Volume: %.0f%%",
+	"menu.pf.volume": "Volume: %d%%%%",
 	"menu.pf.resourcepacks.loaded": "Configure Resource Pack",
 	"menu.pf.resourcepacks.disabled": "Enable Resource Pack",
 	"menu.pf.resourcepacks.none": "Install Resource Pack",
-	"menu.pf.stance": "Walking Stance: %s",
-	"menu.pf.stance.unknown": "AUTO",
+	"menu.pf.stance": "Stance: %s",
+	"menu.pf.stance.unknown": "Auto",
 	"menu.pf.stance.quadraped": "Quadrupedal",
 	"menu.pf.stance.biped": "Bipedal",
-	"menu.pf.stance.flying": "Quad (Pegasus)",
-	"menu.pf.report.full": "Generate full block report",
-	"menu.pf.report.concise": "Generate unknown blocks report",
+	"menu.pf.stance.flying": "Avian",
+	"menu.pf.report.full": "Full report",
+	"menu.pf.report.concise": "Concise report",
 	"pf.mlp.0": "Mine Little Pony has been detected!",
 	"pf.mlp.1": "4-legged mode is now enabled, which will make running sound like galloping amongst other things.",
 	"pf.mlp.2": "To disable it hold down CTRL+SHIFT+F for 1 second.",
