Some minor tidying up

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -5,25 +5,13 @@
 	"menu.pf.multiplayer.false": "Mode: Singleplayer",
 	"menu.pf.volume.min": "Volume: OFF",
 	"menu.pf.volume": "Volume: %d%%%%",
-	"menu.pf.resourcepacks.loaded": "Configure Resource Pack",
-	"menu.pf.resourcepacks.disabled": "Enable Resource Pack",
-	"menu.pf.resourcepacks.none": "Install Resource Pack",
 	"menu.pf.stance": "Stance: %s",
 	"menu.pf.stance.unknown": "Auto",
-	"menu.pf.stance.quadraped": "Quadrupedal",
+	"menu.pf.stance.quadruped": "Quadrupedal",
 	"menu.pf.stance.biped": "Bipedal",
 	"menu.pf.stance.flying": "Avian",
 	"menu.pf.report.full": "Full report",
 	"menu.pf.report.concise": "Concise report",
-	"pf.mlp.0": "Mine Little Pony has been detected!",
-	"pf.mlp.1": "4-legged mode is now enabled, which will make running sound like galloping amongst other things.",
-	"pf.mlp.2": "To disable it hold down CTRL+SHIFT+F for 1 second.",
-	"pf.mlp.2.button": "To disable it press %s.",
-	"pf.mlp.2.stance": "This option will turn off automatically when you remove Mine Little Pony. To disable it now or make it permanent hold down CTRL+SHIFT+F for 1 second.",
-	"pf.mlp.2.stance.button": "This option will turn off automatically when you remove Mine Little Pony. To disable it now or make it permanent press %s.",
-	"pf.pack.yay": "It should work now!",
-	"pf.debug.off": "Debugging Disabled",
-	"pf.debug.on": "Debugging Enabled",
 	"pf.report.save": "File saved as: %s",
 	"pf.report.error": "Failed to generate report: %s",
 	"pf.update.title": "An update is avaiable",
