--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -15,5 +15,24 @@
 	"pf.report.save": "File saved as: %s",
 	"pf.report.error": "Failed to generate report: %s",
 	"pf.update.title": "An Update is Available",
-	"pf.update.text": "Presence Footsteps %s%d"
+	"pf.update.text": "Presence Footsteps %s%d",
+	
+	"subtitles.pf.footsteps": "Footsteps",
+	"subtitles.pf.wood_squeak": "Wood squeaks",
+	"subtitles.pf.wood_bends": "Wood bends",
+	"subtitles.pf.wood_creaks": "Wood creaks",
+	"subtitles.pf.swim": "Water flows",
+	"subtitles.pf.wings_flap": "Wings flap",
+	"subtitles.pf.leaves_rustle": "Leaves rustles",
+	"subtitles.pf.grass_rustles": "Grass rustles",
+	"subtitles.pf.land": "Wings folding",
+	"subtitles.pf.metal_clink": "Metal clinking",
+	"subtitles.pf.snow_crunch": "Snow crunches",
+	"subtitles.pf.sand_crunch": "Sand crunches",
+	"subtitles.pf.grass_crunch": "Grass crunches",
+	"subtitles.pf.gravel.crunch": "Gravel crunches",
+	"subtitles.pf.ice_crack": "Ice cracks",
+	"subtitles.pf.mud_squealk": "Mud squishes",
+	"subtitles.pf.glass_rattles": "Glass rattles",
+	"subtitles.pf.glass_croak": "Glass groans"
 }
