--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -3,6 +3,8 @@
 	"menu.pf.title": "Presence Footsteps Options",
 	"menu.pf.multiplayer.true": "Mode: Multiplayer",
 	"menu.pf.multiplayer.false": "Mode: Singleplayer",
+	"menu.pf.global.true": "Entities: All",
+	"menu.pf.global.false": "Entities: Player",
 	"menu.pf.volume.min": "Volume: OFF",
 	"menu.pf.volume": "Volume: %d%%%%",
 	"menu.pf.stance": "Stance: %s",
