Add locomotion to the debug hud, add locmotion to the report, and add missing locomotion entries

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -9,6 +9,7 @@
 	"menu.pf.volume": "Volume: %d%%%%",
 	"menu.pf.stance": "Stance: %s",
 	"menu.pf.stance.unknown": "Auto",
+	"menu.pf.stance.none": "None",
 	"menu.pf.stance.quadruped": "Quadrupedal",
 	"menu.pf.stance.biped": "Bipedal",
 	"menu.pf.stance.flying": "Avian",
