Add missing translation for chain sounds Fixes #77

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -37,5 +37,6 @@
 	"subtitles.pf.ice_crack": "Ice cracks",
 	"subtitles.pf.mud_squealk": "Mud squishes",
 	"subtitles.pf.glass_rattles": "Glass rattles",
-	"subtitles.pf.glass_croak": "Glass groans"
+	"subtitles.pf.glass_croak": "Glass groans",
+	"subtitles.pf.chain": "Chain Jingles"
 }
