Added a bipedal avian stance. Closes #80 and #86

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -12,7 +12,8 @@
 	"menu.pf.stance.none": "None",
 	"menu.pf.stance.quadruped": "Quadrupedal",
 	"menu.pf.stance.biped": "Bipedal",
-	"menu.pf.stance.flying": "Avian",
+	"menu.pf.stance.flying": "Pegasus",
+	"menu.pf.stance.flying_biped": "Avian",
 	"menu.pf.report.full": "Full report",
 	"menu.pf.report.concise": "Concise report",
 	"pf.report.save": "File saved as: %s",
