Make block reports async and add some UI interaction for checking for updates

--- a/src/main/resources/assets/presencefootsteps/lang/en_us.json
+++ b/src/main/resources/assets/presencefootsteps/lang/en_us.json
@@ -19,7 +19,10 @@
 	"pf.report.save": "File saved as: %s",
 	"pf.report.error": "Failed to generate report: %s",
 	"pf.update.title": "An Update is Available",
-	"pf.update.text": "Presence Footsteps %s for mc%s",
+	"pf.update.text": "Presence Footsteps %s",
+	"pf.update.checking": "Checking for updates...",
+	"pf.update.updates_available": "An update is available!\n Presence Footsteps %s for MC%s",
+	"pf.update.up_to_date": "You are up to date",
 	"subtitles.pf.footsteps": "Footsteps",
 	"subtitles.pf.wood_squeak": "Wood squeaks",
 	"subtitles.pf.wood_bends": "Wood bends",
